3.21-ep1-scale-test-profiles/scale-edge-computing-env/manifests/fake-nodes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: addon-fake-nodes
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: addon-fake-nodes
  labels:
    app: addon-fake-nodes
  namespace: addon-fake-nodes
spec:
  podManagementPolicy: Parallel
  serviceName: addon-fake-nodes
  replicas: 500
  selector:
    matchLabels:
      app: addon-fake-nodes
  template:
    metadata:
      labels:
        app: addon-fake-nodes
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
        - name: mocklet
          image: gcr.io/unique-caldron-775/lwr/mocklet:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 75Mi
            limits:
              cpu: 50m
          ports:
            - containerPort: 80
        - name: mock-calico-node
          image: gcr.io/unique-caldron-775/cnx/tigera/mock-node:release-calient-v3.20
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 250Mi
            limits:
              cpu: 50m
          volumeMounts:
          - mountPath: /etc/pki/tls/certs
            name: tigera-ca-bundle
            readOnly: true
          - mountPath: /etc/pki/tls/cert.pem
            name: tigera-ca-bundle
            readOnly: true
            subPath: ca-bundle.crt
          - mountPath: /node-certs
            name: node-certs
            readOnly: true
      serviceAccountName: addon-fake-nodes
      serviceAccount: addon-fake-nodes
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: tigera-pull-secret
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      volumes:
      - configMap:
          defaultMode: 420
          name: tigera-ca-bundle
        name: tigera-ca-bundle
      - name: node-certs
        secret:
          defaultMode: 420
          secretName: node-certs
