3.21-ep1-scale-test-profiles/scale-edge-computing-env/manifests/example.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: test-ns-9999
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: test-ns-9999
spec:
  containers:
  - name: nginx
    image: bitnami/nginx:1.18
    ports:
    - containerPort: 80
  tolerations:
    - key: "mocklet.io/provider"
      operator: "Equal"
      value: "mock"
      effect: "NoSchedule"
  nodeSelector:
    type: mocklet
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    type: testpol
  name: testpol
  namespace: test-ns-9999
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 192.168.0.0/16
        - 10.0.0.0/8
        - 1.2.3.4/32
        - 5.6.7.8/32
        - 9.10.11.12/32
        - 12.34.5.6/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test-ns-9999
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - ipBlock:
        cidr: 10.96.0.10/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - ipBlock:
        cidr: 169.245.1.1/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test-ns-9999
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
